# genius-tui

./: .gitignore  CHANGELOG.md  README.md  genius_tui.py  pyproject.toml
.github/workflows/: release.yml
src/genius_tui/: __init__.py  app.py
tests/: test_lyrics.py
