[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[project]
name = "genius-tui"
version = "0.1.2"
description = "Textual TUI displaying synced lyrics for the currently playing song (LRCLIB + Genius)"
readme = "README.md"
license = { text = "MIT" }
authors = [
  {name = "Sam Foreman", email = "foremans@anl.gov" },
]
requires-python = ">=3.10"
keywords = ["lyrics", "tui", "textual", "genius", "lrclib", "now-playing"]
classifiers = [
  "Environment :: Console",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "pillow>=10.0",
    "textual-image>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/saforem2/genius-tui"
Repository = "https://github.com/saforem2/genius-tui"
Changelog = "https://github.com/saforem2/genius-tui/blob/main/CHANGELOG.md"

[project.scripts]
genius-tui = "genius_tui.app:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]
